# pgpack_dumper

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
src/pgpack_dumper/: __init__.py  dumper.py  version.py
src/pgpack_dumper/common/: __init__.py  connector.py  copy.py  defines.py  errors.py  info.py  metadata.py  query.py  reader.pxd  reader.pyx  setters.py  stream.py
src/pgpack_dumper/common/queries/: attributes.sql  dbname.sql
