[build-system]
requires = ["setuptools", "wheel", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "pgpack_dumper"
version = "0.3.4.4"
description = "Library for read and write PGPack format between PostgreSQL and file."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "0xMihalich", email = "bayanmobile87@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pgpack==0.3.1.7",
    "psycopg_binary>=3.3.2",
    "psycopg>=3.3.2",
    "sqlparse>=0.5.4",
]

[project.urls]
Homepage = "https://github.com/0xMihalich/pgpack_dumper"
Documentation = "https://github.com/0xMihalich/pgpack_dumper#readme"
Repository = "https://github.com/0xMihalich/pgpack_dumper"
Changelog = "https://github.com/0xMihalich/pgpack_dumper/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {where = ["src"]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
light_compressor = ["**/*.pyx", "**/*.pyi", "**/*.pxd", "**/*.sql", "*.pxd", "*.pyd", "*.pyi", "*.md", "*.txt", "*.sql"]
