[egg_info]
tag_build = 
tag_date = 0

[metadata]
license_files = README.md, CHANGELOG.md

[options]
install_requires =
    pgpack==0.3.2.3
    psycopg_binary>=3.3.3
    psycopg>=3.3.3
    base_dumper==0.0.0.5

[options.package_data]
* =
    common/queryes/*.sql, common/*.pyx, common/*.pyi, common/*.pxd
