[egg_info]
tag_build = 
tag_date = 0

[metadata]
license_files = README.md, CHANGELOG.md

[options]
install_requires =
    pgpack==0.3.3.dev0
    psycopg_binary>=3.3.3
    psycopg>=3.3.3
    base_dumper==0.1.0.dev2

[options.package_data]
* =
    common/queryes/*.sql, common/*.pyx, common/*.pyi, common/*.pxd
