[egg_info]
tag_build = 
tag_date = 0

[metadata]
license_files = README.md, CHANGELOG.md

[options]
install_requires =
    pgpack==0.3.3.dev1
    psycopg_binary>=3.3.3
    psycopg>=3.3.3
    base_dumper==0.1.0.dev4

[options.package_data]
* =
    common/queries/*.sql, common/*.pyx, common/*.pyi, common/*.pxd
